--- a/src/main/resources/templates/saveExam.html
+++ b/src/main/resources/templates/saveExam.html
@@ -97,9 +97,9 @@
 <body>
 <div class="container">
     <h1>save exam</h1>
-    <input id="title" placeholder="Enter title...">
-    <input id="description" placeholder="Enter description...">
-    <input type="number" id="level" placeholder="Enter level...">
+    <input> id="title" placeholder="Enter title...">
+    <input> id="description" placeholder="Enter description...">
+    <input> type="number" id="level" placeholder="Enter level...">
     <button onclick="s();">save</button>
     <script>
         function s()
