--- a/src/main/resources/templates/showExam.html
+++ b/src/main/resources/templates/showExam.html
@@ -136,7 +136,7 @@
 </head>
 <body>
 <center>
-<button id="add-exam">Add Exam</button>
+<a href="/saveExam"><button id="add-exam"  Add Exam</button></a>
 <table id="table" aria-label="Exams Table" role="grid">
     <thead>
     <tr>
