--- a/src/main/resources/templates/saveExam.html
+++ b/src/main/resources/templates/saveExam.html
@@ -57,7 +57,7 @@
              aria-atomic="true">
             <div class="d-flex align-items-center">
 
-                <img src="cat.png"
+                <img src="/cat.png"
                      alt="avatar"
                      class="rounded-circle me-2"
                      style="width:30px; height:30px; animation: shake 0.6s ease-in-out 2;">
@@ -79,9 +79,24 @@
                 <label for="name" class="form-label">عنوان امتحان</label>
                 <input type="text" class="form-control" id="name" placeholder="عنوان امتحان را وارد کنید...">
             </div>
+<!--            <div class="mb-3">-->
+<!--                <label for="level" class="form-label">سطح امتحان</label>-->
+<!--                <input type="number" class="form-control" id="level" placeholder="سطح امتحان را وارد کنید...">-->
+<!--            </div>-->
+
             <div class="mb-3">
-                <label for="level" class="form-label">سطح امتحان</label>
-                <input type="number" class="form-control" id="level" placeholder="سطح امتحان را وارد کنید...">
+                <div>
+                    <label for="HARD" class="form-label" >سخت</label>
+                    <input type="radio" id="HARD" value="HARD" name="level" checked/>
+                </div>
+                <div>
+                    <label for="MEDIUM" class="form-label" >متوسط</label>
+                    <input type="radio" id="MEDIUM" value="MEDIUM" name="level"/>
+                </div>
+                <div>
+                    <label for="EASY" class="form-label" >ساده</label>
+                    <input type="radio" id="EASY" value="EASY" name="level"/>
+                </div>
             </div>
 
             <div class="mb-3">
@@ -100,7 +115,7 @@
     function saveExam(e) {
         e.preventDefault();
         const name = document.getElementById("name").value;
-        const level = document.getElementById("level").value;
+        const level = document.querySelector("input[name='level']:checked").value;
         const description = document.getElementById("description").value;
 
 
@@ -119,9 +134,7 @@
             .then(async res => {
                 if (res.status !== 200) {
                     const response = await res.json();
-                    console.log(response);
-                    console.log(response[0].name);
-                    showErrorToast(response[0].name)
+                    showErrorToast(response[0].title)
                     return;
                 }
                 return res.json();
