--- a/src/main/resources/templates/showExam.html
+++ b/src/main/resources/templates/showExam.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Exams</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
         /* Reset some basic elements */
         body {
@@ -166,7 +170,7 @@
                     <td>${res[i].levelCode}</td>
                     <td><button onclick='d(${res[i].id})' class='b-d'>Delete</button></td>
                     <td><button onclick='u(${res[i].id})' class='b-u'>Update</button></td>
-                    <td><button onclick='q(${res[i].id})' class='b-q'>Questions</button></td>
+                    <td><a href="http://localhost:8083/showQuestion?id=${res[i].id}" class='b-q btn btn-success'>Questions</a></td>
                 `;
             tbody.appendChild(row);
         }
