--- a/src/main/resources/templates/showQuestion.html
+++ b/src/main/resources/templates/showQuestion.html
@@ -113,6 +113,32 @@
             box-shadow: 0 3px 8px rgb(90 60 149 / 0.6);
         }
         /* Responsive design */
+        button#information {
+            margin-bottom: 30px;
+            width: 100%;
+            max-width: 1400px;
+            background: #764ba2;
+            color: white;
+            border-radius: 12px;
+            border: none;
+            padding: 16px;
+            font-size: 17px;
+            font-weight: 700;
+            letter-spacing: 0.07em;
+            box-shadow: 0 6px 16px rgb(118 75 162 / 0.7);
+            user-select: none;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+        button#information:hover {
+            background: #5a3c95;
+            cursor: pointer;
+            transform: translateY(-2px);
+        }
+        button#information:active {
+            transform: translateY(0);
+            box-shadow: 0 3px 8px rgb(90 60 149 / 0.6);
+        }
+        /* Responsive design */
         @media (max-width: 600px) {
             th, td {
                 font-size: 13px;
@@ -132,6 +158,10 @@
 </head>
 <body>
 <center>
+    <h1 id="name"></h1>
+    <br>
+    <a href="http://localhost:8080/show"><button id="information">show exams</button></a>
+    <br>
 <button id="add-question">Add question</button>
 <table id="table" aria-label="questions Table" role="grid">
     <thead>
@@ -175,9 +205,7 @@
     // renderTable();
 
     // Example: Add question button event (this can be customized)
-    // document.getElementById('add-question').addEventListener('click', function() {
-    //     location.replace("/saveQuestion")
-    // });
+
 
 
     let params = new URLSearchParams(window.location.search)
@@ -188,7 +216,20 @@
             renderTable(res);
         })
 
-
+    document.getElementById('add-question').addEventListener('click', function() {
+        location.replace("/saveQuestion?id="+examId);
+    });
+    fetch("http://localhost:8083/exams")
+    .then(res=>res.json())
+    .then(res=>{
+        for(var i=0;i<res.length;i++)
+        {
+            if(examId==res[i].id)
+            {
+                document.getElementById("name").innerHTML="exam name: '"+res[i].name+"'";
+            }
+        }
+    })
 </script>
 </body>
 </html>
