--- a/src/main/resources/templates/saveQuestion.html
+++ b/src/main/resources/templates/saveQuestion.html
@@ -99,6 +99,10 @@
 
 <script>
     function saveQuestion(e) {
+
+        let params = new URLSearchParams(window.location.search)
+        let examId = params.get("id");
+
         e.preventDefault();
         const title = document.getElementById("title").value;
         const o1 = document.getElementById("o1").value;
@@ -113,7 +117,7 @@
 
         const data = {
             title: title,
-            examId: 4,
+            examId: examId,
             optionSaveDtos: [
                 {
                     title: o1,
@@ -171,7 +175,9 @@
                 return res.json();
             })
             .then(res => {
-                console.log(res);
+                if(res) {
+                    window.location.replace("http://localhost:8083/showQuestion?id="+examId);
+                }
             });
     }
 
