--- a/src/main/resources/templates/showExam.html
+++ b/src/main/resources/templates/showExam.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Exams</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         /* Reset some basic elements */
         body {
@@ -174,30 +177,27 @@
 </center>
 <script>
     function renderTable(res) {
-        var tbody = document.querySelector("#table tbody");
+        let tbody = document.querySelector("#table tbody");
         tbody.innerHTML = "";
-        for (var i = 0; i < res.length; i++) {
-            var row = document.createElement("tr");
+        for (let i = 0; i < res.length; i++) {
+            let row = document.createElement("tr");
             row.setAttribute("data-id", res[i].id);
-            row.innerHTML =
+            row.innerHTML = `
                 <td title="${res[i].name}">${res[i].name}</td>
             <td title="${res[i].description}">${res[i].description}</td>
             <td>${res[i].levelCode}</td>
             <td>
-                <button onClick='d(${res[i].id}, this)' class='b-d'>Delete</button>
+                <button onClick='deleteExam(${res[i].id}, this)' class='b-d'>Delete</button>
             </td>
             <td>
-                <button onClick='u(${res[i].id})' class='b-u'>Update</button>
+                <a href="http://localhost:8083/saveExam?id=${res[i].id}" class='b-u btn btn-primary'>Update</a>
             </td>
             <td>
-                <button onClick='q(${res[i].id})' class='b-q'>Questions</button>
-            </td>
-            ;
+                <a href="http://localhost:8083/showQuestion?id=${res[i].id}" class='b-q btn btn-success'>Questions</a>
+            </td>`;
             tbody.appendChild(row);
         }
     }
-
-
 
 
     fetch("http://localhost:8083/exams")
@@ -205,14 +205,11 @@
         .then(res => renderTable(res))
 
 
-    function u(id) {
-        window.location.href = 'saveExam.html?id=${id}';
-    }
 
-    function d(id, btn) {
+    function deleteExam(id, btn) {
         if (!confirm("آیا مطمئنی میخوای حذف کنی؟")) return;
 
-        fetch('http://localhost:8083/exams/${id}', {
+        fetch(`http://localhost:8083/exams/${id}`, {
             method: "DELETE"
         })
             .then(res => {
